<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.udacity.surfconnect.activity.LoginActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_wave"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:drawableTop="@drawable/logo_surf_connect"
        android:drawablePadding="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/phone_login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/background"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.62" />

    <EditText
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/login_label"
        android:textColorHint="#c1cdd8"
        android:textColor="#666666"
        android:background="@android:color/white"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/accountkit_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/accountkit_button_label"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/white"
        android:background="@drawable/login_button_selector"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintHorizontal_bias="0.0" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/accountkit_button"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.25" />

</android.support.constraint.ConstraintLayout>
